# a2a-settlement

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  environment.yml  fly.toml  openapi.yaml  pyproject.toml  railway.json
compliance/: __init__.py  merkle.py  models.py  tsa.py
docs/: architecture.md  attestation-schemas.md  conformance-results.md  integration-guide.md  pricing-models.md  safeguarding-caps.md  self-hosting.md  self-improving-agents.md
examples/: agentcard_example.json  full_lifecycle.py  multi-agent-pipeline.py  quickstart.py  settle_task_end_to_end.py
exchange/: __init__.py  __main__.py  app.py  auth.py  compliance_log.py  config.py  middleware.py  models.py  observers.py  principal_resolver.py  ratelimit.py  reputation_metrics.py  schemas.py  seed.py  spending_guard.py  tasks.py  webhooks.py
exchange/federation/: __init__.py  health.py  (+8 more)
schemas/: dispute-resolution-attestation.v1.json  escrow-refund-attestation.v1.json  escrow-release-attestation.v1.json
scripts/: backup_exchange.sh
sdk/: README.md  pyproject.toml
sdk-ts/: README.md  package.json  tsconfig.json
sdk/a2a_settlement/: __init__.py  agentcard.py  client.py  identity.py  lifecycle.py  metadata.py  pricing.py  types.py
sdk/tests/: test_identity.py  test_metadata.py
test_agents/: client_agent.py  provider_agent.py
tests/: conftest.py  test_compliance_models.py  test_deliver_grounding.py  test_dispute.py  test_escrow.py  test_escrow_attestations.py  test_merkle.py  test_openapi_alignment.py  test_partial_release.py  test_refund.py  test_registration.py  test_release.py  test_reputation.py  test_spending_guard.py  test_timeout_observer.py  test_tsa.py
(+44 files in other folders)
